fix: Truncate text with ellipsis to not obfuscate delete button

--- a/src/style.css
+++ b/src/style.css
@@ -217,6 +217,13 @@ header {
     margin-right: .5rem;
 }
 
+    /*Stop overflow on small screens*/
+.projSpan h3,  #projName {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
 fieldset {
     border: 1;
     padding: 0;
@@ -287,12 +294,18 @@ input[type="checkbox"] {
     font-family: var(--secondary-font);
 }
 
+@keyframes pop-in {
+    0% { opacity: 0; transform: scale(0.1); }
+    100% { opacity: 1; transform: scale(1); }
+}
+
 .noProjects {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100%;
+    animation:pop-in 0.1s;
 }
 .noProjects svg {
     width: 8rem;
@@ -346,3 +359,16 @@ input[type="checkbox"] {
     padding-right: max(2rem, 16px);
     color: white;
 }
+
+#signInBtn {
+    background-color: transparent;
+    border-radius: 1rem;
+    font-family: var(--secondary-font);
+    font-weight: 500;
+    color: rgb(255, 255, 255);
+    background-color: var(--secondary-color);
+    padding: 8px;
+    padding-left: 12px;
+    padding-right: 12px;
+}
+
